@@ -51,7 +51,7 @@ install: build
 	install --group=root --owner=root --mode=644 common-lisp-controller-pre-defsystem.lisp $(DESTDIR)/usr/share/common-lisp/source/common-lisp-controller/
 	install --group=root --owner=root --mode=644 common-lisp-controller-post-defsystem.lisp $(DESTDIR)/usr/share/common-lisp/source/common-lisp-controller/
 	install --group=root --owner=root --mode=644 lisp-config.lisp $(DESTDIR)/etc/lisp-config.lisp
-
+	dh_install reregister-common-lisp-implementations usr/sbin
 
 # Build architecture-independent files here.
  binary-indep: build install
@@ -76,7 +76,8 @@ binary-arch: build install
 #	dh_installinfo
 	dh_undocumented
 	dh_installman clc-send-command.1 clc-build-daemon.8 register-common-lisp-implementation.8 register-common-lisp-source.8 \
-                       unregister-common-lisp-implementation.8 unregister-common-lisp-source.8
+                unregister-common-lisp-implementation.8 unregister-common-lisp-source.8 \
+		reregister-common-lisp-implementations.1
 	dh_link
 	dh_strip
 	dh_compress
