@@ -1,0 +1,14 @@
+#!/bin/bash -e
+# Rebuilds all common lisp implementations
+# Written by Kevin Rosenberg <kmr@debian.org>
+# GPL-2 license
+
+clc_bin_dir=/usr/lib/common-lisp/bin
+
+shopt -s nullglob
+cd $clc_bin_dir
+for impl_bin in *.sh; do
+    impl=$(echo $impl_bin | sed 's/\(.*\).sh/\1/')
+    unregister-common-lisp-implementation $impl
+    register-common-lisp-implementation $impl
+done
