@@ -1,0 +1,25 @@
+.\" 	-*- Mode: Nroff -*-
+.TH reregister-common-lisp-implementations "Sep 14, 2002"
+.SH NAME
+reregister-common-lisp-implementations \- Reregister (rebuild) all Common Lisp Implementations
+
+.SH SYNOPSIS
+.B reregister-common-lisp-implementations 
+
+.SH DESCRIPTION
+This command rebuils all Common Lisp implementations. This includes rebuilding
+the base Lisp image as well as all registered Common Lisp source packages.
+.PP
+This command is typically used internally by Common Lisp Controller when a
+new system definition facility is installed.
+
+.SH SEE ALSO
+register-common-lisp-implementation(8)
+
+.SH BUGS
+
+Bug reports should be sent to the debian BTS, preferably with
+reportbug.
+
+.SH AUTHOR
+Kevin M. Rosenberg (kmr@debian.org), 2002
